--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,7 @@ install:
     - cpanm --quiet --notest --installdeps .
 
 script:
-    - PERL5OPT=-MDevel::Cover=-ignore,"t/",+ignore,"prove",-coverage,statement,branch,condition,path,subroutine prove -lrs t
-    - cover
-
-after_success:
-    - cover -report coveralls
+    - make test
 
 sudo: false
 
